# backend/src/custom-bot/dto/create-custom-bot.dto.ts
@@ -1,22 +1,11 @@
 import { ApiProperty } from "@nestjs/swagger";
-import { Type } from "class-transformer";
-import { CreateTriggerDto } from "../../trigger/dto/create-trigger.dto";
-import {
-    ArrayMinSize,
-    IsArray,
-    IsDefined,
-    IsString,
-    MinLength,
-    ValidateNested,
-} from "class-validator";
+import { IsDefined, IsString, MinLength } from "class-validator";
 export class CreateCustomBotDto {
-    @ApiProperty({ isArray: true, type: CreateTriggerDto })
-    @Type(() => CreateTriggerDto)
-    @IsArray()
+    @ApiProperty()
     @IsDefined()
-    @ArrayMinSize(1)
-    @ValidateNested({ each: true })
-    triggers!: CreateTriggerDto[];
+    @IsString()
+    @MinLength(1)
+    name!: string;
 
     @ApiProperty()
     @IsDefined()
